fix cards being centered on small screens on startpage

--- a/src/components/startpageposts/StartPageListPosts.css
+++ b/src/components/startpageposts/StartPageListPosts.css
@@ -2,7 +2,6 @@
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   max-width: 1280px;
-  justify-content: center;
 }
 .startpage-list-post-container .cardPost:nth-child(1),
 .startpage-list-post-container .cardPost:nth-child(2),
@@ -31,7 +30,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 640px) {
   .startpage-list-post-container .cardPost:nth-child(1),
   .startpage-list-post-container .cardPost:nth-child(2),
   .startpage-list-post-container .cardPost:nth-child(3) {
